--- a/src/main/resources/templates/admin/brand/delete.html
+++ b/src/main/resources/templates/admin/brand/delete.html
@@ -6,24 +6,24 @@
         lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Brendlər - Silinmə</title>
+    <title>Brendi Sil</title>
 </head>
 <body>
 
 <section layout:fragment="content">
 
-    <h1 style="text-align: center;">Are you sure to delete?</h1>
+    <h1 style="text-align: center;">Silmək istədiyinə əminsən?</h1>
 
     <div style="text-align: center; margin: 20px;">
-        <button style="background-color: #007bff; color: white; border: none; border-radius: 4px; padding: 10px 15px; cursor: pointer; margin-right: 10px;">
-            <a href="/admin/brand" style="color: white; text-decoration: none;">Cancel</a>
+        <button class="btn btn-secondary" style="margin-right: 10px;">
+            <a href="/admin/brand" style="color: white; text-decoration: none;">İmtina</a>
         </button>
 
         <form method="post" style="display: inline;">
             <input type="hidden" name="brandId" th:value="${brand.id}">
-            <button type="submit" style="background-color: #dc3545; color: white; border: none; border-radius: 4px; padding: 10px 15px; cursor: pointer;">
-                Delete
-            </button>
+            <button type="submit" class="btn btn-primary" style="background-color: #FF4D4D; border-color: #FF4D4D; min-width: 70px;"
+                    onmouseover="this.style.backgroundColor='#FF2929';" onmouseout="this.style.backgroundColor='#FF4D4D';">
+                Sil</button>
         </form>
     </div>
 
