--- a/src/main/resources/templates/admin/order/update.html
+++ b/src/main/resources/templates/admin/order/update.html
@@ -6,7 +6,7 @@
         lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Sifarişlər - Yenilə</title>
+    <title>Sifarişi Yenilə</title>
 </head>
 <body>
 
@@ -17,78 +17,99 @@
             <!-- Sol tərəfdəki input sahələri -->
             <div style="flex: 1; margin-right: 20px;">
                 <div style="margin-top: 5px; margin-bottom: 0px;">
-                    <label>Order Address:</label>
+                    <label>Çatdırılma Ünvanı:</label>
                 </div>
                 <div style="margin: 2px 0;">
-                    <input type="text" name="name" th:value="${order.name}" placeholder="Order name" style="width: 80%;"
-                           required>
+                    <input type="text" name="name" th:value="${order.name}" placeholder="Ad" required
+                           style="width: 80%; height: 40px; padding: 10px; outline: none;
+                   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); border: 1px solid #ccc; border-radius: 5px;">
                 </div>
                 <div style="margin: 10px 0;">
-                    <input type="text" name="surname" th:value="${order.surname}" placeholder="Order surname"
-                           style="width: 80%;" required>
+                    <input type="text" name="surname" th:value="${order.surname}" placeholder="Soyad" required
+                           style="width: 80%; height: 40px; padding: 10px; outline: none;
+                   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); border: 1px solid #ccc; border-radius: 5px;">
                 </div>
                 <div style="margin: 10px 0;">
-                    <input type="text" name="phoneNumber" th:value="${order.phoneNumber}"
-                           placeholder="Order phone number" style="width: 80%;" required>
+                    <input type="text" name="phoneNumber" th:value="${order.phoneNumber}" placeholder="Telefon nömrəsi"
+                           required
+                           style="width: 80%; height: 40px; padding: 10px; outline: none;
+                   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); border: 1px solid #ccc; border-radius: 5px;">
                 </div>
                 <div style="margin: 10px 0;">
-                    <input type="text" name="email" th:value="${order.email}" placeholder="Order email"
-                           style="width: 80%;" required>
+                    <input type="text" name="email" th:value="${order.email}" placeholder="E-poçt" required
+                           style="width: 80%; height: 40px; padding: 10px; outline: none;
+                   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); border: 1px solid #ccc; border-radius: 5px;">
                 </div>
                 <div style="margin: 10px 0;">
-                    <input type="text" name="city" th:value="${order.city}" placeholder="Order city" style="width: 80%;"
-                           required>
+                    <input type="text" name="city" th:value="${order.city}" placeholder="Şəhər" required
+                           style="width: 80%; height: 40px; padding: 10px; outline: none;
+                   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); border: 1px solid #ccc; border-radius: 5px;">
                 </div>
                 <div style="margin: 10px 0;">
-                    <input type="text" name="address" th:value="${order.address}" placeholder="Order address"
-                           style="width: 80%;" required>
+                    <input type="text" name="address" th:value="${order.address}" placeholder="Ünvan" required
+                           style="width: 80%; height: 40px; padding: 10px; outline: none;
+                   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); border: 1px solid #ccc; border-radius: 5px;">
                 </div>
                 <div style="margin: 10px 0;">
-                    <input type="text" name="message" th:value="${order.message}" placeholder="Order message"
-                           style="width: 80%;">
+                    <input type="text" name="message" th:value="${order.message}" placeholder="Qeyd"
+                           style="width: 80%; height: 40px; padding: 10px; outline: none;
+                   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); border: 1px solid #ccc; border-radius: 5px;">
                 </div>
             </div>
             <!-- Sağ tərəfdəki input sahələri -->
             <div style="flex: 1;">
                 <div style="margin-top: 5px; margin-bottom: 0px;">
-                    <input type="checkbox" id="differBilling" name="differBilling" th:checked="${order.differBilling}">
-                    <label for="differBilling">Different billing address</label>
+                    <input type="checkbox" id="differBilling" name="differBilling" th:checked="${order.differBilling}"
+                    style="width: 16px; height: 16px; margin-right: 10px;">
+                    <label for="differBilling" style="cursor: pointer;">Faktura ünvanı fərqlidir</label>
                 </div>
                 <div style="margin: 1px 0;">
-                    <input type="text" name="billName" th:value="${order.billName}" placeholder="Order bill name"
-                           style="width: 80%;">
+                    <input type="text" name="billName" th:value="${order.billName}" placeholder="Faktura adı"
+                           style="width: 80%; height: 40px; padding: 10px; outline: none;
+                   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); border: 1px solid #ccc; border-radius: 5px;">
                 </div>
                 <div style="margin: 10px 0;">
-                    <input type="text" name="billSurname" th:value="${order.billSurname}"
-                           placeholder="Order bill surname" style="width: 80%;">
+                    <input type="text" name="billSurname" th:value="${order.billSurname}" placeholder="Faktura soyadı"
+                           style="width: 80%; height: 40px; padding: 10px; outline: none;
+                   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); border: 1px solid #ccc; border-radius: 5px;">
                 </div>
                 <div style="margin: 10px 0;">
                     <input type="text" name="billPhoneNumber" th:value="${order.billPhoneNumber}"
-                           placeholder="Order bill phone number" style="width: 80%;">
+                           placeholder="Faktura telefon nömrəsi"
+                           style="width: 80%; height: 40px; padding: 10px; outline: none;
+                   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); border: 1px solid #ccc; border-radius: 5px;">
                 </div>
                 <div style="margin: 10px 0;">
-                    <input type="text" name="billEmail" th:value="${order.billEmail}" placeholder="Order bill email"
-                           style="width: 80%;">
+                    <input type="text" name="billEmail" th:value="${order.billEmail}" placeholder="Faktura e-poçtu"
+                           style="width: 80%; height: 40px; padding: 10px; outline: none;
+                   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); border: 1px solid #ccc; border-radius: 5px;">
                 </div>
                 <div style="margin: 10px 0;">
-                    <input type="text" name="billCity" th:value="${order.billCity}" placeholder="Order bill city"
-                           style="width: 80%;">
+                    <input type="text" name="billCity" th:value="${order.billCity}" placeholder="Faktura şəhəri"
+                           style="width: 80%; height: 40px; padding: 10px; outline: none;
+                   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); border: 1px solid #ccc; border-radius: 5px;">
                 </div>
                 <div style="margin: 10px 0;">
-                    <input type="text" name="billAddress" th:value="${order.billAddress}"
-                           placeholder="Order bill address" style="width: 80%;">
+                    <input type="text" name="billAddress" th:value="${order.billAddress}" placeholder="Faktura ünvanı"
+                           style="width: 80%; height: 40px; padding: 10px; outline: none;
+                   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); border: 1px solid #ccc; border-radius: 5px;">
                 </div>
                 <div style="margin: 10px 0;">
-                    <input type="text" name="billMessage" th:value="${order.billMessage}"
-                           placeholder="Order bill message" style="width: 80%;">
+                    <input type="text" name="billMessage" th:value="${order.billMessage}" placeholder="Faktura qeydi"
+                           style="width: 80%; height: 40px; padding: 10px; outline: none;
+                   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); border: 1px solid #ccc; border-radius: 5px;">
                 </div>
             </div>
         </div>
-        <div style="display: flex; gap: 20px;">
+        <div style="display: flex; gap: 30px; margin-bottom: 15px;">
             <!-- Payment Method seçimi -->
             <div style="margin: 10px 0;">
-                <label for="paymentMethod" style="display: block; margin-bottom: 1px;">Payment Method:</label>
-                <select id="paymentMethod" name="paymentMethod" style="width: 200px; height: 30px;">
+                <label style="display: block; margin-bottom: 2px; font-size: 16px;"
+                       for="paymentMethod" >Ödəniş Üsulu:</label>
+                <select id="paymentMethod" name="paymentMethod"
+                        style="width: 210px; height: 35px; padding: 5px 10px; font-size: 15px; color: #3D464D;
+                        border: 1px solid #ccc; border-radius: 5px; box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+                        transition: border-color 0.3s ease, box-shadow 0.3s ease; outline: none; cursor: pointer;">
                     <option th:each="method : ${paymentMethods}"
                             th:value="${method}"
                             th:text="${method}"
@@ -98,8 +119,12 @@
             </div>
             <!-- Order Status seçimi -->
             <div style="margin: 10px 0;">
-                <label for="orderStatus" style="display: block; margin-bottom: 1px;">Order Status:</label>
-                <select id="orderStatus" name="orderStatus" style="width: 200px; height: 30px;">
+                <label style="display: block; margin-bottom: 2px; font-size: 16px;"
+                       for="orderStatus">Sifarişin Statusu:</label>
+                <select id="orderStatus" name="orderStatus"
+                        style="width: 210px; height: 35px; padding: 5px 10px; font-size: 15px; color: #3D464D;
+                        border: 1px solid #ccc; border-radius: 5px; box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+                        transition: border-color 0.3s ease, box-shadow 0.3s ease; outline: none; cursor: pointer;">
                     <option th:each="status : ${orderStatuses}"
                             th:value="${status}"
                             th:text="${status}"
@@ -109,8 +134,12 @@
             </div>
             <!-- Payment Status seçimi -->
             <div style="margin: 10px 0;">
-                <label for="paymentStatus" style="display: block; margin-bottom: 1px;">Payment Status:</label>
-                <select id="paymentStatus" name="paymentStatus" style="width: 200px; height: 30px;">
+                <label style="display: block; margin-bottom: 2px; font-size: 16px;"
+                       for="paymentStatus" >Ödənişin Statusu:</label>
+                <select id="paymentStatus" name="paymentStatus"
+                        style="width: 210px; height: 35px; padding: 5px 10px; font-size: 15px; color: #2C353B;
+                        border: 1px solid #ccc; border-radius: 5px; box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+                        transition: border-color 0.3s ease, box-shadow 0.3s ease; outline: none; cursor: pointer;">
                     <option th:each="status : ${paymentStatuses}"
                             th:value="${status}"
                             th:text="${status}"
@@ -120,31 +149,39 @@
             </div>
         </div>
         <!-- OrderItems siyahısı -->
-        <table class="table table-striped">
-            <thead>
-            <tr>
-                <th scope="col">Id</th>
-                <th scope="col">Product</th>
-                <th scope="col">Price</th>
-                <th scope="col">Quantity</th>
-                <th scope="col">Actions</th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr th:each="orderItem : ${order.orderItems}">
-                <td th:text="${orderItem.id}" scope="row">Id</td>
-                <td th:text="${orderItem.product.name}">Product</td>
-                <td th:text="${orderItem.price}">Price</td>
-                <td th:text="${orderItem.quantity}">Quantity</td>
-                <td>
-                    <a th:href="'/admin/order/update-item/' + ${orderItem.id}">Update</a>
-                    <a th:href="'/admin/order/delete-item/' + ${orderItem.id}">Delete</a>
-                </td>
-            </tr>
-            </tbody>
-        </table>
+        <div style="margin-bottom: 30px;">
+            <h3 onclick="var table = document.getElementById('orderItemsTable'); table.style.display = (table.style.display === 'none') ? 'table' : 'none';"
+                style="font-size: 18px; color: #3D464D; margin-bottom: 5px; cursor: pointer; padding: 5px; transition: background-color 0.3s ease;"
+                onmouseover="this.style.backgroundColor='#ebebeb';" onmouseout="this.style.backgroundColor='transparent';">Məhsul Siyahısı</h3>
+            <table id="orderItemsTable" class="table table-striped" style="margin-bottom: 50px; display: none;">
+                <thead>
+                <tr>
+                    <th scope="col">Id</th>
+                    <th scope="col">Məhsul</th>
+                    <th scope="col">Qiymət</th>
+                    <th scope="col">Miqdar</th>
+                    <th scope="col">Seçimlər</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr th:each="orderItem : ${order.orderItems}">
+                    <td th:text="${orderItem.id}" scope="row" style="vertical-align: middle;">Id</td>
+                    <td th:text="${orderItem.product.name}" style="vertical-align: middle;">Product</td>
+                    <td th:text="${orderItem.price} + ' ₼'" style="vertical-align: middle;">Price</td>
+                    <td th:text="${orderItem.quantity} + ' əd.'" style="vertical-align: middle;">Quantity</td>
+                    <td style="vertical-align: middle;">
+                        <a th:href="'/admin/order/update-item/' + ${orderItem.id}" class="btn btn-primary py-1 px-2">Yenilə</a>
+                        <a th:href="'/admin/order/delete-item/' + ${orderItem.id}" class="btn btn-primary py-1 px-2">Sil</a>
+                    </td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
         <div style="margin: 10px 0;">
-            <input type="submit" value="Update">
+            <input type="submit" value="Saxla" class="btn btn-primary py-2 px-4"
+                   style="color: #3D464D; background-color: #FFD333; border-color: #FFD333;"
+                   onmouseover="this.style.backgroundColor='#FFC107'; this.style.borderColor='#FFC107';"
+                   onmouseout="this.style.backgroundColor='#FFD333'; this.style.borderColor='#FFD333';">
         </div>
     </form>
 
