--- a/src/main/resources/templates/admin/product/create.html
+++ b/src/main/resources/templates/admin/product/create.html
@@ -6,86 +6,151 @@
         lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Məhsullar - Əlavə et</title>
+    <title>Məhsul Əlavə et</title>
 </head>
 <body>
 
 <section layout:fragment="content">
 
-    <form method="post" onsubmit="return validateAndSubmitForm();" style="margin-left: 50px;">
-        <div style="margin: 10px 0;">
-            <input type="text" name="name" placeholder="Product name" style="width: 350px;" required>
-        </div>
-        <div style="margin: 10px 0;">
-            <input type="number" name="price" placeholder="Price" style="width: 350px;" required>
-        </div>
-        <div style="margin: 10px 0;">
-            <input type="text" name="description" placeholder="Description" style="width: 350px;" required>
-        </div>
-        <div style="margin: 10px 0;">
-            <input type="text" name="moreDetail" placeholder="More detail" style="width: 350px;" required>
-        </div>
-        <div style="margin: 10px 0;">
-            <input type="number" name="discountPrice" placeholder="Discount price" style="width: 350px;" required>
-        </div>
-        <div style="margin: 10px 0;">
-            <label for="discountDate" style="display: block; margin-bottom: 1px;">Discount Date:</label>
-            <input type="datetime-local" name="discountDate" id="discountDate" style="width: 350px;" required>
-        </div>
+    <form method="post" enctype="multipart/form-data" onsubmit="return validateAndSubmitForm();"
+          style="margin-left: 70px; margin-right: 70px;">
+        <div style="display: flex; justify-content: space-between;">
+            <!-- Sol tərəfdəki inputlar -->
+            <div style="flex: 1; margin-right: 20px;">
+                <div style="margin: 10px 0;">
+                    <input type="text" name="name" placeholder="Məhsul adı" required
+                           style="width: 400px; height: 40px; padding: 10px; outline: none;
+                       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); border: 1px solid #ccc; border-radius: 5px;">
+                </div>
+                <div style="margin: 10px 0;">
+                    <input type="number" name="price" placeholder="Qiymət" required
+                           style="width: 400px; height: 40px; padding: 10px; outline: none;
+                       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); border: 1px solid #ccc; border-radius: 5px;">
+                </div>
+                <div style="margin: 10px 0;">
+                    <input type="text" name="description" placeholder="Haqqında" required
+                           style="width: 400px; height: 40px; padding: 10px; outline: none;
+                       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); border: 1px solid #ccc; border-radius: 5px;">
+                </div>
+                <div style="margin: 10px 0;">
+                    <input type="text" name="moreDetail" placeholder="Ətraflı məlumat" required
+                           style="width: 400px; height: 40px; padding: 10px; outline: none;
+                       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); border: 1px solid #ccc; border-radius: 5px;">
+                </div>
+                <div style="margin: 10px 0;">
+                    <input type="number" name="discountPrice" placeholder="Endirim qiyməti" required
+                           style="width: 400px; height: 40px; padding: 10px; outline: none;
+                       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); border: 1px solid #ccc; border-radius: 5px;">
+                </div>
+                <div style="margin: 10px 0;">
+                    <label for="discountDate" style="display: block; margin-bottom: 1px;">Endirim Tarixi:</label>
+                    <input type="datetime-local" name="discountDate" id="discountDate" required
+                           style="width: 400px; height: 40px; padding: 10px; outline: none;
+                       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); border: 1px solid #ccc; border-radius: 5px;">
+                </div>
 
-        <!-- Dinamik şəkil URL inputları -->
-        <div id="imagesContainer" style="margin: 10px 0;">
-            <label for="images" style="display: block; margin-bottom: 1px;">Product Images:</label>
-            <div style="display: flex; align-items: center; margin-bottom: 10px;">
-                <input type="text" name="images" placeholder="Enter image URL" id="images" style="width: 350px;" required>
-                <button type="button" onclick="removeImage(this)" style="margin-left: 5px; display: none;">Remove</button>
+
+            </div>
+
+            <!-- Sağ tərəfdəki checkbox-lar və select-lər -->
+            <div style="flex: 1;">
+                <div style="margin: 10px 0;">
+                    <input type="checkbox" id="featured" name="featured"
+                           style="width: 16px; height: 16px; margin-right: 10px;">
+                    <label for="featured" style="cursor: pointer;">Önə Çıxarılsın?</label>
+                </div>
+                <div style="margin: 10px 0;">
+                    <input type="checkbox" id="offered" name="offered"
+                           style="width: 16px; height: 16px; margin-right: 10px;">
+                    <label for="offered" style="cursor: pointer;">Təklif Edilsin?</label>
+                </div>
+                <div style="margin: 10px 0;">
+                    <label for="brand" style="display: block; margin-bottom: 2px; font-size: 16px;">Brend:</label>
+                    <select name="brand" id="brand" required
+                            style="width: 320px; height: 40px; padding: 5px 10px; font-size: 15px; color: #3D464D;
+                            border: 1px solid #ccc; border-radius: 5px; box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+                            transition: border-color 0.3s ease, box-shadow 0.3s ease; outline: none; cursor: pointer;">
+                        <option value="">Brend seç</option>
+                        <th:block th:each="brand : ${brands}">
+                            <option th:value="${brand.id}" th:text="${brand.name}"></option>
+                        </th:block>
+                    </select>
+                </div>
+
+                <div style="margin: 10px 0;">
+                    <label for="category"
+                           style="display: block; margin-bottom: 2px; font-size: 16px;">Kateqoriya:</label>
+                    <select name="category" id="category" required
+                            style="width: 320px; height: 40px; padding: 5px 10px; font-size: 15px; color: #3D464D;
+                            border: 1px solid #ccc; border-radius: 5px; box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+                            transition: border-color 0.3s ease, box-shadow 0.3s ease; outline: none; cursor: pointer;">
+                        <option value="">Kateqoriya seç</option>
+                        <th:block th:each="category : ${categories}">
+                            <option th:value="${category.id}" th:text="${category.name}"></option>
+                        </th:block>
+                    </select>
+                </div>
+
+                <div style="margin: 10px 0;">
+                    <label for="subcategory" style="display: block; margin-bottom: 2px; font-size: 16px;">Alt
+                        Kateqoriya:</label>
+                    <select name="subcategory" id="subcategory" required
+                            style="width: 320px; height: 40px; padding: 5px 10px; font-size: 15px; color: #3D464D;
+                            border: 1px solid #ccc; border-radius: 5px; box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+                            transition: border-color 0.3s ease, box-shadow 0.3s ease; outline: none; cursor: pointer;">
+                        <option value="">Alt kateqoriya seç</option>
+                        <th:block th:each="subcategory : ${subcategories}">
+                            <option th:value="${subcategory.id}" th:text="${subcategory.subcategoryName.name}"></option>
+                        </th:block>
+                    </select>
+                </div>
             </div>
         </div>
-        <button type="button" onclick="addImage()" style="margin-bottom: 10px;">Add Another Image</button>
 
-        <div style="margin: 10px 0;">
-            <input type="checkbox" id="featured" name="featured">
-            <label for="featured">Is featured?</label>
-        </div>
-        <div style="margin: 10px 0;">
-            <input type="checkbox" id="offered" name="offered">
-            <label for="offered">Is offered?</label>
-        </div>
-
-        <div style="margin: 10px 0;">
-            <label for="brand" style="display: block; margin-bottom: 1px;">Brand:</label>
-            <select name="brand" id="brand" style="width: 350px;" required>
-                <option value="">Select brand</option>
-                <th:block th:each="brand : ${brands}">
-                    <option th:value="${brand.id}" th:text="${brand.name}"></option>
-                </th:block>
-            </select>
-        </div>
-
-        <div style="margin: 10px 0;">
-            <label for="category" style="display: block; margin-bottom: 1px;">Category:</label>
-            <select name="category" id="category" style="width: 350px;" required>
-                <option value="">Select category</option>
-                <th:block th:each="category : ${categories}">
-                    <option th:value="${category.id}" th:text="${category.name}"></option>
-                </th:block>
-            </select>
-        </div>
-
-        <div style="margin: 10px 0;">
-            <label for="subcategory" style="display: block; margin-bottom: 1px;">Subcategory:</label>
-            <select name="subcategory" id="subcategory" style="width: 350px;" required>
-                <option value="">Select subcategory</option>
-                <th:block th:each="subcategory : ${subcategories}">
-                    <option th:value="${subcategory.id}" th:text="${subcategory.subcategoryName.name}"></option>
-                </th:block>
-            </select>
+        <!-- Dinamik şəkil inputları -->
+        <div style="border: 1px solid #ccc; padding: 10px; border-radius: 5px; width: 100%; max-width: 825px;
+                    margin: 10px 0; margin-top: 20px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
+            <div style="display: flex; justify-content: space-between; align-items: center;">
+                <label style="font-size: 16px; font-weight: bold;">
+                    Məhsulun Şəkilləri:
+                </label>
+                <!-- Xüsusi "Əlavə et" düyməsi -->
+                <button type="button" onclick="document.getElementById('imageUpload').click();"
+                        class="btn btn-primary py-1 px-3" style="background-color: #28a745; border: none;"
+                        onmouseover="this.style.backgroundColor='#218838';"
+                        onmouseout="this.style.backgroundColor='#28a745';">Əlavə et
+                </button>
+            </div>
+            <!-- Gizli fayl yükləmə inputu -->
+            <div id="imagePreviewContainer">
+                <input type="file" name="images" multiple accept="image/*" style="display: none;"
+                       id="imageUpload">
+            </div>
+            <!-- Şəkil olmadıqda yazı görünür -->
+            <div id="noImageTextContainer" style="display: flex; flex-wrap: wrap; margin-top: 10px;">
+                <span id="noImageText" class="no-image-text">Hələki şəkil yoxdur</span>
+            </div>
+            <!-- Xəbərdarlıq mesajı -->
+            <div id="imageWarning" style="display: none; color: red; font-size: 14px; margin-top: 5px;">
+                Şəkil əlavə edin!
+            </div>
         </div>
 
-        <div style="margin: 10px 0;">
-            <button type="submit">Create</button>
+        <!-- Saxla düyməsi -->
+        <div style="margin: 10px 0; margin-top: 40px;">
+            <button type="submit" class="btn btn-primary py-2 px-4"
+                    style="color: #3D464D; background-color: #FFD333; border-color: #FFD333;"
+                    onmouseover="this.style.backgroundColor='#FFC107'; this.style.borderColor='#FFC107';"
+                    onmouseout="this.style.backgroundColor='#FFD333'; this.style.borderColor='#FFD333';">Saxla
+            </button>
         </div>
     </form>
+
+    <!-- Modal pəncərə -->
+    <div id="imageModal" style="display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background-color: rgba(0, 0, 0, 0.8); justify-content: center; align-items: center; z-index: 1000;">
+        <span onclick="closeModal()" style="position: absolute; top: 20px; right: 40px; color: white; font-size: 30px; cursor: pointer;">&times;</span>
+        <img id="modalImage" style="max-width: 90%; max-height: 90%; border-radius: 10px;">
+    </div>
 
 
 </section>
