--- a/src/main/resources/templates/admin/slider/create.html
+++ b/src/main/resources/templates/admin/slider/create.html
@@ -6,7 +6,7 @@
         lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Slaydlar - Əlavə et</title>
+    <title>Slayd Əlavə et</title>
 </head>
 <body>
 
@@ -14,23 +14,38 @@
 
     <form method="post" style="margin-left: 50px;">
         <div style="margin: 10px 0;">
-            <input type="text" name="title" placeholder="Write slide title" style="width: 350px;" required>
+            <input type="text" name="title" placeholder="Slaydın başlığını yaz" required
+                   style="width: 400px; height: 40px; padding: 10px; outline: none;
+                   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); border: 1px solid #ccc; border-radius: 5px;">
         </div>
         <div style="margin: 10px 0;">
-            <input type="text" name="description" placeholder="Write slide description" style="width: 350px;" required>
+            <input type="text" name="description" placeholder="Slaydın mətnini yaz" required
+                   style="width: 400px; height: 40px; padding: 10px; outline: none;
+                   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); border: 1px solid #ccc; border-radius: 5px;">
         </div>
         <div style="margin: 10px 0;">
-            <input type="text" name="image" placeholder="Write slide image url" style="width: 350px;" required>
+            <input type="text" name="image" placeholder="Şəkil URL-i daxil et" required
+                   style="width: 400px; height: 40px; padding: 10px; outline: none;
+                   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); border: 1px solid #ccc; border-radius: 5px;">
         </div>
         <div style="margin: 10px 0;">
-            <input type="text" name="url" placeholder="Write url to click" style="width: 350px;" required>
+            <input type="text" name="url" placeholder="Keçid URL-i daxil et" required
+                   style="width: 400px; height: 40px; padding: 10px; outline: none;
+                   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); border: 1px solid #ccc; border-radius: 5px;">
         </div>
         <div style="margin: 10px 0;">
-            <input type="checkbox" id="active" name="active">
-            <label for="active">Is active?</label>
+            <input type="checkbox" id="active" name="active"
+                   style="width: 17px; height: 17px; margin-right: 10px; vertical-align: middle; transition: background-color 0.3s ease;
+                   border-radius: 5px; outline: none; border: 1px solid #ccc; box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); cursor: pointer;">
+            <label for="active" style="font-size: 17px; color: #3D464D; cursor: pointer; line-height: 17px;">Aktivdir?</label>
         </div>
-        <div style="margin: 10px 0;">
-            <button type="submit">Create</button>
+
+        <div style="margin: 10px 0; margin-top: 40px;">
+            <button type="submit" class="btn btn-primary py-2 px-4"
+                    style="color: #3D464D; background-color: #FFD333; border-color: #FFD333;"
+                    onmouseover="this.style.backgroundColor='#FFC107'; this.style.borderColor='#FFC107';"
+                    onmouseout="this.style.backgroundColor='#FFD333'; this.style.borderColor='#FFD333';">
+                Saxla</button>
         </div>
     </form>
 
