--- a/src/main/resources/templates/shop/index.html
+++ b/src/main/resources/templates/shop/index.html
@@ -113,7 +113,8 @@
                         </div>
                     </div>
                     <!-- Brand End -->
-                    <button type="submit">Filtrlə</button>
+                    <button type="submit" class="btn btn-primary py-2 px-4">
+                        Filtrlə</button>
                 </form>
             </div>
             <!-- Shop Sidebar End -->
